# axum_postgres_rust

./: .env  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  init.sql
.claude/: settings.local.json
.sqlx/: query-2778a0ca8b47730c3b84d6d0cd24d7e64f46d85f4a876f8449f665b09357bce7.json  query-7d99947513c9f69d3ba0301e6220b5e3ae52f8cdf51fe645db3a3ccef93b05b1.json  query-8719f40afac96eafd9f852c77166e09e6b1ef3b1662704cab3a2d4aa0871a173.json  query-9dfcb367cd03b43ab6821c6264b25af1fa22162881394a9a55da73a82ff90d55.json  query-acb09e8380d7e4333c02ad2ee4302af0697c18679d31f92f1e71651e0569e23e.json  query-c1abbb6f12011bcee57ec41d451e2a35b8c06483622e7be99c9ee303272e23ae.json  query-c9ea605d10cfd38ed4e7ffee4dba343f0ca69c3b9e1f26be07bb4948996ce823.json  query-df51227b9429abf305692a2de6dc7151793b80b376ea56bdcac5bc7537a1724c.json
agents/: README.md  backend-developer.md  database-engineer.md  devops-engineer.md  domain-expert.md  product-owner.md  qa-engineer.md  software-architect.md  technical-lead.md
bruno/: API Info.bru  Health Check copy.bru  Health Check.bru  Metrics.bru  README.md
coverage/: tarpaulin-report.html
docs/: 02_handler_functions___shared_state.md  04_application_configuration.md  05_containerized_environment.md  06_hexagonal_architecture.md  07_domain_layer.md  08_application_layer.md  09_infrastructure_adapters.md  10_dependency_injection_testing.md
migrations/: 001_add_task_status.sql  002_add_status_history.sql
plans/: task-status-transitions.md
readme_files/: 01_axum_web_router.md  03_compile_time_verified_sql.md  (+6 more)
(+69 files in other folders)
