
[package]
name = "axum_postgres_rust"
version = "0.1.0"
edition = "2021"

[dependencies]

# Web framework
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.47.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace"] }

# Database
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls", "macros", "chrono"] }

# serde
serde = { version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"

# Environment and configuration
dotenvy = "0.15.7"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0.12"

# Async traits
async-trait = "0.1"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
mockall = "0.13" 
futures = "0.3"
